# jupyterlab-gt-coar-theme

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  dodo.py  install.json  lerna.json  package.json  setup.cfg  setup.py  tsconfig.json
.binder/: apt.txt  environment.yml  postBuild
.binder/jupyterlab-videochat/: branding.json
.binder/user-settings/@jupyterlab/apputils-extension/: themes.json  themes.jupyterlab-settings
.binder/user-settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
.github/: .condarc  pip-build.txt
.github/workflows/: ci.yml
py_src/jupyterlab_gt_coar_theme/: __init__.py  _version.py
src/: index.ts  tokens.ts  typings.d.ts
style/: brand.css  dark.css  fonts.css  gt.css  index.css  light.css  variables.css
