# Copyright (c) 2021 University System of Georgia and jupyterlab-gt-coar-theme contributors
# Distributed under the terms of the BSD-3-Clause License.

[metadata]
long_description = file: ./README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Jupyter

[options]
python_requires = >=3.6
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyterlab >=3,<4

[options.packages.find]
where =
    py_src

[options.extras_require]
lint =
    black
    flake8
    isort
    pyflakes
dev =
    %(lint)s
    wheel
    twine
    doit

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache,.pytest-cache
extend-ignore = E203,W503
max-line-length = 88

[isort]
profile = black
multi_line_output = 3
known_first_party = jupyterlab_gt_coar_theme
